Revert "Absolute height of 50px added to .full-listing-header to prevent floating text from collapsing div"
This reverts commit 5e8beaae08e521390146495d2d399d055164d1fa.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -253,7 +253,6 @@
 
 .full-listing-header {
     font-size: 9pt;
-    height: 50px;
     margin-bottom: 5px;
     padding: 7px 0px 7px 20px;
     background-color: #fdfdfd;
